--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
+        
         <script src="scripts.js"></script>
     </body>
 </html>
