--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        
+        <!-- Hello world!-->
         <script src="scripts.js"></script>
     </body>
 </html>
