Made sure that the value entered by the user for the grid number is a number

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <!-- Hello world!-->
+        <!-- Hello wrld!-->
         <script src="scripts.js"></script>
     </body>
 </html>
